# PerFi

./: .gitignore  LICENSE  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.claude/skills/code-reviewer/: SKILL.md
.claude/skills/debugger/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_import_issue.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-review.yml  secret-scan.yml  tauri-windows.yml
scripts/: categorize_all.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_teller.sql  003_fix_categories.sql  004_wealth_planning.sql  005_account_balances.sql  006_planning_exclusions.sql
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src-tauri/src/categorize/: rules.rs
src-tauri/src/commands/: accounts.rs  budgets.rs  categories.rs  dashboard.rs  forecasting.rs  goals.rs  import.rs  insights.rs  investment_import.rs  mod.rs  net_worth.rs  plaid.rs  retirement.rs  system.rs  teller.rs  transactions.rs
src-tauri/src/import/: csv_parser.rs
src-tauri/src/planning/: mod.rs  monte_carlo.rs  projections.rs  tax_brackets.rs
src/components/: Layout.tsx
src/components/ui/: card.tsx  (+9 more)
src/lib/: api.ts  theme.ts  types.ts  utils.ts
src/styles/: globals.css
tests/e2e/: accounts-settings-import.spec.ts  dashboard.spec.ts  forecast.spec.ts  planning-exclusions.spec.ts  screenshots.spec.ts
(+51 files in other folders)
