[package]
name = "perfi"
version = "0.1.0"
edition = "2021"

[lib]
name = "perfi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
getrandom = "0.2"
tokio = { version = "1", features = ["full"] }
